crates/nargo_cli/tests/compile_failure/duplicate_declaration/src/main.nr
// Duplicate functions should not compile
fn hello(x : Field) -> Field {
    x
}

fn hello(x : Field) -> Field {
    x
}